bump dss to 6.2